--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bunyan": "^1.8.15",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -33,7 +34,7 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "prettier": "^3.2.5",
     "sequelize-cli": "^6.6.2"
   }
