--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write ./src",
-    "start": "npm run format && nodemon src/server.js",
-    "migrate": "npx sequelize-cli db:migrate"
+    "start": "npm run format && nodemon server.js",
+    "migrate": "npx sequelize-cli db:migrate",
+    "migrate:test": "NODE_ENV=test npx sequelize-cli db:migrate",
+    "test": "jest --watchAll --verbose"
   },
   "author": "Nishat Roy",
   "license": "ISC",
@@ -31,11 +32,14 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.13",
     "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
   },
   "devDependencies": {
     "chalk": "^4.1.2",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^7.0.0"
   }
 }
