--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,9 @@ src/db/config/config.json
 #test database
 test/db/test.sqlite
 
+# upload file
+public/uploads/*
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
