--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "redis": "^4.6.13",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
