--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "format": "prettier --write ./src",
     "start": "npm run format && nodemon server.js",
+    "migrations": "npx sequelize-cli migration:generate --name",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate:test": "NODE_ENV=test npx sequelize-cli db:migrate",
     "test": "jest --watchAll --verbose"
